// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Example/Status Winner Null Next X 1`] = `
<span
  data-e2e="status"
>
  次のプレイヤー X's turn
</span>
`;

exports[`Storyshots Example/Status Winner X 1`] = `
<span
  data-e2e="status"
>
  Winner: X
</span>
`;

exports[`Storyshots Example/Status Winner Y 1`] = `
<span
  data-e2e="status"
>
  Winner: Y
</span>
`;
